# discrete-optimization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  credits.md  environment.yml  mypy.ini  postBuild  pyproject.toml  setup.py  start  versions.json
.github/scripts/: parse_doctest.py
.github/workflows/: build-doc.yml  build.yml  deploy-doc.yml
0.1.dev1+g3d1cde5/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.1.dev1+g3d1cde5/_modules/: index.html
0.1.dev1+g3d1cde5/_sources/: notebooks.md.txt
0.1.dev1+g3d1cde5/_static/: documentation_options.js
0.1.dev1+g3d1cde5/api/: discrete_optimization.coloring.html  discrete_optimization.coloring.solvers.html  discrete_optimization.facility.html  discrete_optimization.facility.solvers.html  discrete_optimization.generic_rcpsp_tools.html  discrete_optimization.generic_tools.callbacks.html  discrete_optimization.generic_tools.ea.html  discrete_optimization.generic_tools.html  discrete_optimization.generic_tools.hyperparameters.html  discrete_optimization.generic_tools.ls.html  discrete_optimization.generic_tools.mip.html  discrete_optimization.generic_tools.mutations.html  discrete_optimization.generic_tools.pytools.html  discrete_optimization.generic_tools.result_storage.html  discrete_optimization.generic_tools.robustness.html  discrete_optimization.html  discrete_optimization.knapsack.html  discrete_optimization.knapsack.mutation.html  discrete_optimization.knapsack.solvers.html  discrete_optimization.pickup_vrp.builders.html  discrete_optimization.pickup_vrp.html  discrete_optimization.pickup_vrp.plots.html  discrete_optimization.pickup_vrp.solver.html  discrete_optimization.rcpsp.html  discrete_optimization.rcpsp.mutations.html  discrete_optimization.rcpsp.plots.html  discrete_optimization.rcpsp.solver.html  discrete_optimization.rcpsp.specialized_rcpsp.html  discrete_optimization.rcpsp_multiskill.html  discrete_optimization.rcpsp_multiskill.plots.html  discrete_optimization.rcpsp_multiskill.solvers.html  discrete_optimization.tsp.html  discrete_optimization.tsp.mutation.html  modules.html  (+4 more)
0.2.1/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.2.2/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.0/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.1/: .buildinfo  contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html
0.3.2/: contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.4.0/: contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.5.0/: contribute.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.6.0/: contribute.html  dashboard.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html
0.7.0/: contribute.html  dashboard.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.8.0/: contribute.html  dashboard.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.9.0/: contribute.html  dashboard.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
binder/: environment.yml  postBuild  start
discrete_optimization/: __init__.py  datasets.py
docs/: README.md  generate_nb_index.py
master/: .buildinfo  contribute.html  dashboard.html  genindex.html  getting_started.html  index.html  install.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js
notebooks/: Knapsack tutorial.ipynb  RCPSP #1 Introduction.ipynb  RCPSP #2 Heuristics Solving.ipynb  RCPSP #3 Local search.ipynb  knapsack.ipynb
tests/: conftest.py  show_do_path.py  test_import_all_examples.py  test_import_all_submodules.py  test_tuto_new_pb_solver.py
(+6470 files in other folders)
