[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "discrete-optimization"
description = "Discrete optimization library"
readme = "README.md"
authors=[
  {name= "Airbus AI Research",  email = "scikit-decide@airbus.com"},
]
license={text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7"
dependencies = [
    "shapely>=1.7",
    "mip>=1.13",
    "minizinc>=0.6.0",
    "deap>=1.3.1",
    "networkx>=2.5  ",
    "numba>=0.50",
    "matplotlib>=3.1",
    "seaborn>=0.10.1",
    "pymzn>=0.18.3",
    "ortools>=8.0",
    "tqdm>=4.62.3",
    "sortedcontainers>=2.4",
    "deprecation",
    "typing-extensions>=4.0",
    "cpmpy>=0.9.9",
    "scipy",
    "numpy>=1.21",
    "typing_extensions>=4.4"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "scikit-learn>=1.0"]

[project.urls]
documentation = "https://airbus.github.io/discrete-optimization"
repository = "https://github.com/airbus/discrete-optimization"

[tool.setuptools.packages.find]
where = ["."]
include = ["discrete_optimization*"]

[tool.setuptools.dynamic]
version = {attr = "discrete_optimization.__version__"}

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
implicit_optional = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
